--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,5 @@
 #container{
     display: flex;
- 
     justify-content: center;
     flex-wrap: wrap;
 }
@@ -25,6 +24,10 @@ button:hover{
     cursor: pointer;
 } 
 
-.azul{
+.verde{
     background-color: rgb(0, 251, 96);
+}
+
+.rojo{
+    background-color: red;
 }
