--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
 }
 
-#adivinar{
+#guess{
     display: flex;
     justify-content: space-evenly;
     font-size: 30px;
@@ -24,10 +24,28 @@ button:hover{
     cursor: pointer;
 } 
 
-.verde{
+.green{
     background-color: rgb(0, 251, 96);
 }
 
-.rojo{
+.red{
     background-color: red;
 }
+
+/* #timer{
+	position: absolute;
+	left: 116px;
+	top: 135px;
+	width: 420px;
+	font-family: Tahoma, Geneva, sans-serif;
+	font-size: 20px;
+	color: black;
+	text-align: right;
+} */
+
+.body{
+    display: flex;
+    justify-content: center;
+    height: 250px;
+    width: 250px;
+} 
