--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,9 +1,20 @@
+body{
+    background-image: url(https://i.pinimg.com/originals/71/31/77/713177e7b221e3d2570237268fd19c6e.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 #container{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    
 }
 
+button{
+    color: teal;
+    background-color: rgb(188, 188, 188);
+    opacity: 32px;
+}
 #guess{
     display: flex;
     justify-content: space-evenly;
@@ -20,7 +31,7 @@ button{
 
 button:hover{
      
-     background-color: rgb(255, 255, 7);
+     background-color: dodgerblue;
     cursor: pointer;
 } 
 
@@ -49,3 +60,42 @@ button:hover{
     height: 250px;
     width: 250px;
 } 
+
+h1{
+    display: flex;
+    justify-content: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#etiqueta{
+    /* left: 0;
+    right: 0;
+    opacity: 0; */
+    /* width: 100%; */
+    /* height: 100%; */
+    z-index: 9999;
+    display:flex;
+    /* position: absolute; */
+    align-items: center;
+    /* pointer-events: none; */
+    justify-content: center;
+    /* transition: opacity 0.5s ease; */
+    background: violet;
+    position: absolute;
+    width: 100%;
+    height: 80vh;
+    
+
+}
+
+
+.mostrarEtiqueta{
+    opacity: 1;
+}
+
+#counter{
+    display: flex;
+    border-radius: 1px, solid white;
+    justify-content: center;
+}
+ 
