--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,103 +1,100 @@
-body{
-    background-image: url(https://www.mundodeportivo.com/alfabeta/hero/2020/05/pokemon-estadio.jpg?width=1200);
-    background-repeat: no-repeat;
-    background-size: cover;
+body {
+  background-image: url(https://www.coliseugeek.com.br/wp-content/uploads/2023/01/6776c-clickwallpapers-pokemon-4k-img2-scaled-1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
- 
-#container{
+#container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+button {
+  color: rgb(0, 0, 0);
+  opacity: 32px;
+}
+#guess {
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 30px;
+}
+
+button {
+  width: 70px;
+  height: 35px;
+  border-radius: 6px;
+  border: 1px rgb(0, 0, 0) solid;
+  margin: 10px;
+}
+
+button:hover {
+  background: #2bc0e4;
+  background: -webkit-linear-gradient(to right, #eaecc6, #2bc0e4);
+  background: linear-gradient(to right, #eaecc6, #2bc0e4);
+  cursor: pointer;
+}
+
+.green {
+  background-color: rgb(0, 251, 96);
+}
+
+.red {
+  background-color: red;
+}
+
+.body {
+  display: flex;
+  justify-content: center;
+  height: 250px;
+  width: 250px;
+}
+
+h1 {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  color: rgb(255, 255, 255);
+}
+
+h1::before {
+  content: "";
+  position: absolute;
+  inset: -5px; /* control the spread */
+  transform: translate(10px, 8px); /* control the offsets */
+  z-index: -1; /* place the element behind */
+  background: #de6262;
+  background: -webkit-linear-gradient(to right, #ffb88c, #de6262);
+  background: linear-gradient(to right, #ffb88c, #de6262);
+  filter: blur(10px); /* control the blur */
+}
+
+#counter {
+  display: flex;
+  border-radius: 1px, solid white;
+  justify-content: center;
+}
+
+.containerbody {
+  display: flex;
+  justify-content: center;
+}
+
+h2 {
+  color: white;
+}
+
+.button_pista {
+  display: flex;
+  justify-content: space-around;
+}
+
+#parts {
+  width: 124px;
+  filter: brightness(0%);
+}
+
+#crono{
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    
+    justify-content: flex-end;
 }
-
-button{
-    color: teal;
-    background-color: rgb(188, 188, 188);
-    opacity: 32px;
-}
-#guess{
-    display: flex;
-    justify-content: space-evenly;
-    font-size: 30px;
-}
-
-button{
-    width: 70px;
-    height: 35px;
-    border-radius: 6px;
-    border: 1px white solid;
-    margin: 10px;
-}
-
-button:hover{
-     
-     background-color: dodgerblue;
-    cursor: pointer;
-} 
-
-.green{
-    background-color: rgb(0, 251, 96);
-}
-
-.red{
-    background-color: red;
-}
-
-/* #timer{
-	position: absolute;
-	left: 116px;
-	top: 135px;
-	width: 420px;
-	font-family: Tahoma, Geneva, sans-serif;
-	font-size: 20px;
-	color: black;
-	text-align: right;
-} */
-
-.body{
-    display: flex;
-    justify-content: center;
-    height: 250px;
-    width: 250px;
-} 
-
-h1{
-    display: flex;
-    justify-content: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-#etiqueta{
-    /* left: 0;
-    right: 0;
-    opacity: 0; */
-    /* width: 100%; */
-    /* height: 100%; */
-    z-index: 9999;
-    display:flex;
-    /* position: absolute; */
-    align-items: center;
-    /* pointer-events: none; */
-    justify-content: center;
-    /* transition: opacity 0.5s ease; */
-    background: violet;
-    position: absolute;
-    width: 100%;
-    height: 80vh;
-    
-
-}
-
-
-.mostrarEtiqueta{
-    opacity: 1;
-}
-
-#counter{
-    display: flex;
-    border-radius: 1px, solid white;
-    justify-content: center;
-}
- 
